fix overflow in infobox

--- a/src/seatingChart/compos/InfoBox/LinkParty/style.css
+++ b/src/seatingChart/compos/InfoBox/LinkParty/style.css
@@ -7,7 +7,6 @@
    display: flex;
    flex-grow: 1;
    flex-direction: column;
-   min-height: 0; /* Allow flex item to shrink below content size */
    justify-content: center;
    align-items: left;
    gap: 8px;
